hphp/test/zend/good/Zend/tests/class_name_as_scalar_error_001.php.expectf

Fatal error: Cannot use static or parent::class in constant declaration in %s/class_name_as_scalar_error_001.php on line 5
